# MysqlCli

./: Cargo.toml  MysqlCli.py  README.md
src/: main.rs
